test-suite/tests/ui/states/invalid/undeclared_assign.stderr
error: assigned state is not declared
 --> tests/ui/states/invalid/undeclared_assign.rs:8:21
  |
8 |     #[stated(assign(B))]
  |                     ^
